# erc20-transfer-logger

./: Cargo.toml  README.md  sqlx-data.json
configuration/: base.yaml  local.yaml
migrations/: 20230109023101_create_tracker_states_Table.sql  20230109181803_create_erc20_tracker_transfer_event_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  tracker_client.rs  worker_loop.rs
src/constants/: ierc20.rs  mod.rs
src/utils/: mod.rs  socket_validator.rs
